# WireMark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
docs/: experiment-runbook.md  protocol.md
docs/en/: design.md  usage.md
docs/zh/: design.md  usage.md
examples/: run-local.sh  run-remote.sh
include/wiremark/: capture.hpp  compact.hpp  crypto.hpp  logger.hpp  netif.hpp  nfq_gateway.hpp  protocol.hpp  tcp.hpp  tun.hpp  udp.hpp  util.hpp
scripts/: analyze_capture.py  nfq-rules.sh  setup-tun-example.sh
src/: capture.cpp  compact.cpp  crypto.cpp  logger.cpp  main.cpp  netif.cpp  nfq_gateway.cpp  nfq_gateway_stub.cpp  packet_policy.cpp  protocol.cpp  tcp.cpp  tun.cpp  udp.cpp
